# cocos2d-x-tests-harmonyos-next-project

./: build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/MainAbility/: MainAbility.ets
entry/src/main/ets/workers/: CocosWorker.ets
entry/src/main/resources/base/element/: string.json
libSysCapabilities/: oh-package.json5
libSysCapabilities/src/main/ets/common/: GlobalContext.ts
libSysCapabilities/src/main/ets/components/webview/: WebViewMsg.ets
libSysCapabilities/src/main/ets/napi/: NapiHelper.ets  NapiHelper.ts
libSysCapabilities/src/main/ets/preferences/: Preferences.ets
libSysCapabilities/src/main/ets/system/appJump/: JumpManagerMsg.ets
libSysCapabilities/src/main/ets/system/device/: DeviceUtils.ets
